<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5FCAA4">

    <!-- Return Button -->
    <Button
        android:id="@+id/returnButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back_arrow"
        android:contentDescription="@string/return_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Name Input Button -->
    <EditText
        android:id="@+id/userInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:importantForAutofill="no"
        android:ems="10"
        android:hint="@string/userInput"
        android:inputType="textPersonName"
        android:textSize="25sp"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Date Picker Button -->
    <Button
        android:id="@+id/userBirthday"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/date_picker"
        android:textSize="30sp"
        android:textColor="#000000"
        style="?android:spinnerStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="openDatePicker"/>

    <!-- Notification Toggle -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notifications"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="@string/notifications"
        android:layout_marginTop="325dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <!-- Confirmation Button -->
    <Button
        android:id="@+id/confirm"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="215dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>